gravitee-apim-portal-webui-next/src/components/page/page-markdown/page-markdown.component.scss
/*
 * Copyright (C) 2024 The Gravitee team (http://gravitee.io)
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *         http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
@use '../../../scss/theme';

img {
  max-width: 100%;
}

pre {
  white-space: pre-wrap;
  word-wrap: break-word;
}

table {
  overflow: hidden;
  width: auto;
  box-sizing: border-box;
  border-radius: 8px;
  margin: 12px 0 14px;
  border-collapse: collapse;
  box-shadow: 0 0 0 1px #{theme.$table-border-color};
  color: #{theme.$paragraph-color};

  tbody {
    border-bottom: hidden;
  }

  th {
    background-color: #{theme.$table-header-background-color};
    color: #{theme.$paragraph-color};
    font-weight: 300;
  }

  th,
  td {
    height: 32px;
    padding: 5px 14px 5px 12px;
    border: 1px solid #{theme.$table-border-color};
    border-collapse: collapse;

    &:first-child {
      border-left: none;
    }

    &:last-child {
      border-right: none;
    }
  }

  tr:first-child th,
  tr:first-child td {
    border-top: none;
  }

  tr:last-child td {
    border-bottom: none;
  }
}

.marked-alert-icons {
  width: var(--gio-marked-alert-icon-width, 24px);
  height: var(--gio-marked-alert-icon-width, 24px);
  margin: 0 8px;
  font-family: 'Material Icons', sans-serif;
  font-size: var(--gio-marked-alert-icon-width, 24px);
  vertical-align: middle;

  &--note {
    color: var(--gio-marked-alert-icon-note-color, inherit);
  }

  &--tip {
    color: var(--gio-marked-alert-icon-tip-color, inherit);
  }

  &--important {
    color: var(--gio-marked-alert-icon-important-color, inherit);
  }

  &--warning {
    color: var(--gio-marked-alert-icon-warning-color, inherit);
  }

  &--caution {
    color: var(--gio-marked-alert-icon-caution-color, inherit);
  }
}

